--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,9 @@
             <h3>First Heading</h3>
 
             <ul class="menu">
-                <li><i class="fas fa-home"></i>   <a href="{{site.baseurl}}/">About</a></li>
-                <li><i class="fas fa-home"></i>   <a href="{{site.baseurl}}/_pages/publications">Publications</a></li>
-                <li><i class="fas fa-home"></i>     <a href="{{site.baseurl}}/_pages/software">Software</a></li>
-                <li><i class="fas fa-home"></i>    <a href="{{site.baseurl}}/_pages/"></a></li>
+                <li><i class="fas fa-address-card"></i>   <a href="{{site.baseurl}}/">About</a></li>
+                <li><i class="fas fa-copy"></i>   <a href="{{site.baseurl}}/publications">Publications</a></li>
+                <li><i class="fas fa-code"></i>     <a href="{{site.baseurl}}/software">Software</a></li>
             </ul>
         </nav>
 
