--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             <p>&copy; <time>2012</time> {{ site.author }}</p>
         </footer>
 
-        <script src="{{site.baseurl}}/scripts.js"></script>
+        <script src="{{site.baseurl}}/_scripts/scripts.js"></script>
     </body>
 
 </html>
