--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
         <meta charset="utf-8"/>
         <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
-        <link rel="stylesheet" href="{{site.baseurl}}/_style/style.css" />
+        <link rel="stylesheet" href="{{site.baseurl}}/style/style.css" />
         <meta name="description" content="{{site.description}}"/>
         <meta name="author" content="{{site.author}}"/>
     </head>
@@ -37,7 +37,7 @@
             <p>&copy; <time>2018</time> {{ site.author }}</p>
         </footer>
 
-        <script src="{{site.baseurl}}/_scripts/script.js"></script>
+        <script src="{{site.baseurl}}/:scripts/script.js"></script>
     </body>
 
 </html>
