--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
     <body>
 
         <header>
-                <div class = "title"> {{page.title}} </div>
+                <div class = "title flex-item"> {{page.title}} </div>
 		<nav>
-	      	<ul class="menu">
+	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
                            <i class="fas fa-address-card"></i>   <a href="{{site.baseurl}}/">About</a></li>
 		      	<li class="menu-item">
