--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <body>
 
         <header>
-                <div class = "title flex-item"> {{page.title}} </div>
+                <div class = "title flex-item"> <strong> {{page.title}}</strong> </div>
 		<nav>
 	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
