--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
         </main>
 
         <footer>
-            <hr />
-            <p>&copy; <time>2018</time> {{ site.author }}</p>
+            <p class="flex-item">&copy; <time>2018</time> {{ site.author }}</p>
         </footer>
 
         <script src="{{site.baseurl}}/scripts/script.js"></script>
