--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,8 @@ footer {
  position: absolute;
  width: 100%;
  justify-content:  space-between;
+ background-color: #02001c;
+ color: #ceefce;
 }
 
 .flex-item {
