--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
 		<nav>
 	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
-                           <i class="fas fa-address-card"></i>   <a href="{{site.baseurl}}/">About</a></li>
+                            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i></li></a>
 		      	<li class="menu-item">
-                           <i class="fas fa-copy"></i>   <a href="{{site.baseurl}}/publications">Publications</a></li>
+                           <a href="{{site.baseurl}}/publications"><i class="fas fa-copy" title="Publications"></i></li></a>
 		       	<li class="menu-item">
-                           <i class="fas fa-code"></i>     <a href="{{site.baseurl}}/software">Software</a></li>
+                          <a href="{{site.baseurl}}/software"><i class="fas fa-code" title="Software"></i></li></a>
          	</ul>
 	       	</nav>
         </header>
