--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<nav>
 	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
-                            <a ref="{{site.baseurl}}"><i class="fas fa-home" title="Home"></i></a></li>	
+                            <a ref="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i></a></li>	
                         <li class="menu-item">
                             <a ref="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i></a></li>		
                  	<li class="menu-item">
