--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
 		<nav>
 	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
-                            <a ref="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i></a></li>	
+                            <a href="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i></a></li>	
                         <li class="menu-item">
-                            <a ref="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i></a></li>		
+                            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i></a></li>		
                  	<li class="menu-item">
                             <a href="{{site.baseurl}}/publications"><i class="fas fa-copy" title="Publications"></i></a></li>
 	 	       	<li class="menu-item">
