--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,13 +17,13 @@
 		<nav>
 	      	<ul class="menu flex-item">
 		      	<li class="menu-item">
-                            <a href="{{site.baseurl}}/"><i class="fas fa-home fa-2x" title="Home"></i></a></li>	
+                            <a href="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i>Home</a></li>	
                         <li class="menu-item">
-                            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card fa-2x" title="Info"></i></a></li>		
+                            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i></a></li>		
                  	<li class="menu-item">
-                            <a href="{{site.baseurl}}/publications"><i class="fas fa-copy fa-2x" title="Publications"></i></a></li>
+                            <a href="{{site.baseurl}}/publications"><i class="fas fa-copy" title="Publications"></i></a></li>
 	 	       	<li class="menu-item">
-                            <a href="{{site.baseurl}}/software"><i class="fas fa-code fa-2x" title="Software"></i></a></li>
+                            <a href="{{site.baseurl}}/software"><i class="fas fa-code" title="Software"></i></a></li>
           	</ul>
 	       	</nav>
         </header>
