--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,24 +17,16 @@
       <nav>
         <ul class="menu flex-item">
           <li class="menu-item">
-            <a href="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i>
-              <div class="hidden-text">Home</div>
-            </a>
+            <a href="{{site.baseurl}}/"><i class="fas fa-home" title="Home"></i><div class="hidden-text">Home</div></a>
           </li>	
           <li class="menu-item">
-            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i>
-              <div class="hidden-text">Contacts and Info</div>
-            </a>
+            <a href="{{site.baseurl}}/info"><i class="fas fa-address-card" title="Info"></i><div class="hidden-text">Contacts and Info</div></a>
           </li>		
           <li class="menu-item">
-            <a href="{{site.baseurl}}/publications"><i class="fas fa-copy" title="Publications"></i>
-              <div class="hidden-text">Publications</div>
-            </a>
+            <a href="{{site.baseurl}}/publications"><i class="fas fa-copy" title="Publications"></i><div class="hidden-text">Publications</div></a>
           </li>
           <li class="menu-item">
-            <a href="{{site.baseurl}}/software"><i class="fas fa-code" title="Software"></i>
-              <div class="hidden-text">Software</div>
-            </a>
+            <a href="{{site.baseurl}}/software"><i class="fas fa-code" title="Software"></i><div class="hidden-text">Software</div></a>
           </li>
         </ul>
       </nav>
