--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   <body>
 
     <header>
+      <div class = "title flex-item"> <strong> {{site.title}}</strong> </div>
       <div class = "title flex-item"> <strong> {{page.title}}</strong> </div>
       <nav>
         <ul class="menu flex-item">
