--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ main {
 footer {
  display: flex;
  bottom: 0;
- position: absolute;
+ position: relative;
  width: 100%;
  justify-content:  space-between;
  background-color: #02001c;
