--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 
     <header>
       <div class = "title flex-item"> <strong> {{site.title}}</strong> </div>
-      <!--> <div class = "title flex-item"> <strong> {{page.title}}</strong> </div><!-->
+      <!-- <div class = "title flex-item"> <strong> {{page.title}}</strong> </div> --!>
       <a class = "flex-item"  href="{{site.baseurl}}/">Home</a> 
       <a class = "flex-item"  href="{{site.baseurl}}/publications">Publications</a>
       <a class = "flex-item"  href="{{site.baseurl}}/software">Code</a>
-      <!-->  
+      <!--
       <nav>
         <ul class="menu flex-item">
           <li class="menu-item">
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <!-->
+      --!>
     </header>
 
     <main>
