--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       <a class = "flex-item"  href="{{site.baseurl}}/">Home</a> 
       <a class = "flex-item"  href="{{site.baseurl}}/publications">Publications</a>
       <a class = "flex-item"  href="{{site.baseurl}}/software">Code</a>
+      <div class ="flex-item">   </div>
       <!--
       <nav>
         <ul class="menu flex-item">
