--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <!-- <div class = "title flex-item"> <strong> {{page.title}}</strong> </div> --!>
       <a class = "flex-item"  href="{{site.baseurl}}/">Home</a> 
       <a class = "flex-item"  href="{{site.baseurl}}/publications">Publications</a>
-      <a class = "flex-item"  href="{{site.baseurl}}/software">Code</a>
+      <a class = "flex-item"  href="{{site.baseurl}}/code">Code</a>
       <div class ="flex-item">   </div>
       <!--
       <nav>
