--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,9 +43,10 @@
     <main>
 
 
-    <h2>{{page.title }}</h2>
-    {{ content }}
-
+    <div class= "content">
+      <h2>{{page.title }}</h2>
+      {{ content }}
+    </div>
     </main>
 
     <footer>
