--- a/style/style.css
+++ b/style/style.css
@@ -67,3 +67,9 @@ main li {
   padding: 5px;
 }
 
+div.content {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top:5px;
+  padding-bottom:5px;
+}
