--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@ main {
  margin-top:70px;
  height: 100%;
  width: 90%;
+ overflow-y: hidden;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom:5px;
