--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ header {
  right: 0;
  width: 100%;
  background-color: #02001c;
- color: #ceefce;
+ color: white;
  display: flex;
  justify-content:  space-between;
 }
@@ -44,7 +44,7 @@ footer {
  right:0;
  justify-content:  space-between;
  background-color: #02001c;
- color: #ceefce;
+ color: white;
 }
 
 .flex-item {
