--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,28 +13,52 @@
 
   <body>
 
-    <header>
-      <div class = "title flex-item"> <strong> {{site.title}}</strong> </div>
-      <!-- <div class = "title flex-item"> <strong> {{page.title}}</strong> </div> --!>
-      <a class = "flex-item"  href="{{site.baseurl}}/">Home</a> 
-      <a class = "flex-item"  href="{{site.baseurl}}/publications">Publications</a>
-      <a class = "flex-item"  href="{{site.baseurl}}/code">Code</a>
-      <div class ="flex-item">   </div>
-   </header>
+   
+   <main>
 
-    <main>
+   <aside class = "sidebar"> 
+   <h3> {{site.data.info.name}} </h3>
+   <div class = "menu">
+   <a class = "menu-item"  href="{{site.baseurl}}/publications">Publications</a>
+   <a class = "menu-item"  href="{{site.baseurl}}/code">Code</a>
+   </div>
+   <img src="{{site.base_url}}/images/me.JPG" alt="Gherardo Varando" width = "95%" 
+   class = "myimg">
+   <div class = "links">
+    {% for x in site.data.links %}
+    <a href="{{x.link}}" class = "links-item">
+     {{x.name}}
+    </a>
+   {% endfor %}
+   </div>
+   <hr>
+   <strong> News </strong>
+   <div class = "news">
+     {% for post in site.posts %}
+       <div class = "news-item">
+       <a href="{{ post.url }}">{{ post.title }}</a>
+       <div class="newsbody">
+       {{ post.excerpt }}
+       </div>
+       </div>
+       <hr>
+     {% endfor %}
+     </div>
+   </aside>
 
 
+     <article>
      <h2>{{page.title }}</h2>
      
      {{ content }}
     
+     </article>
     </main>
 
-    <footer>
+<!--    <footer>
       <p class="flex-item">&copy; <time>2018</time> {{ site.author }}</p>
     </footer>
-
+-->
     <script src="{{site.baseurl}}/scripts/script.js"></script>
   </body>
 
