--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,6 @@
 <html>
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <head>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <meta charset="utf-8"/>
     <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
     <link rel="stylesheet" href="{{site.baseurl}}/style/style.css" />
@@ -23,25 +22,23 @@
    <a class = "menu-item"  href="{{site.baseurl}}/code">Code</a>
    </div>
    <img src="{{site.base_url}}/images/me.JPG" alt="Gherardo Varando" width = "95%" 
-   class = "myimg">
+   class = "his">
    <div class = "links">
     {% for x in site.data.links %}
     <a href="{{x.link}}" class = "links-item">
-     {{x.name}}
+     {{x.name}} |
     </a>
    {% endfor %}
    </div>
-   <hr>
    <strong> News </strong>
    <div class = "news">
      {% for post in site.posts %}
        <div class = "news-item">
        <a href="{{ post.url }}">{{ post.title }}</a>
-       <div class="newsbody">
+       <div class="his">
        {{ post.excerpt }}
        </div>
        </div>
-       <hr>
      {% endfor %}
      </div>
    </aside>
@@ -55,10 +52,6 @@
      </article>
     </main>
 
-<!--    <footer>
-      <p class="flex-item">&copy; <time>2018</time> {{ site.author }}</p>
-    </footer>
--->
     <script src="{{site.baseurl}}/scripts/script.js"></script>
   </body>
 
