--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
     </a>
    {% endfor %}
    </div>
-   <strong> News </strong>
-   <div class = "news">
+   <strong class = "his"> News </strong>
+   <div class = "news his">
      {% for post in site.posts %}
        <div class = "news-item">
        <a href="{{ post.url }}">{{ post.title }}</a>
