--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
    <aside class = "sidebar"> 
    <h3> {{site.data.info.name}} </h3>
    <div class = "menu">
-   <a class = "menu-item"  href="{{site.baseurl}}/publications">Publications</a>
+   <a class = "menu-item"  href="{{site.baseurl}}/">Home | </a>
+   <a class = "menu-item"  href="{{site.baseurl}}/publications">Publications | </a>
    <a class = "menu-item"  href="{{site.baseurl}}/code">Code</a>
    </div>
    <img src="{{site.base_url}}/images/me.JPG" alt="Gherardo Varando" width = "95%" 
