--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
        {{ post.excerpt }}
        </div>
        </div>
+     <hr style="border: 1px solid white; width: 100%;">
      {% endfor %}
      </div>
    </aside>
