--- a/style/style.css
+++ b/style/style.css
@@ -7,29 +7,20 @@ body {
 }
 
 
-.sidebar a:hover .hidden-text {
- display: none;
-}
-
-.sidebar a {
- color: #ceefce;
-}
-
 article { 
- width: 70%;
+	width: 100%;
+ padding: 10px;
  height:100%;
  display:block;
  overflow:scroll;
 }
 
 main {
+	width ; 100%;
  position: fixed;
- display: flex;
  left:0;
  top: 0;
  bottom: 0;
- flex-direction: row;
- justify-content: space-between;
 }
 
 div.title {
@@ -37,18 +28,9 @@ div.title {
  font-weight: bold; 
 }
 
-.sidebar {
- width: 20%;
- height:100%;
- display : flex; 
- background-color: #02001c;
- color: white;
- flex-direction: column;
-}
 
 .news {
   overflow: scroll;
-  font-size: x-small; 
   display:flex; 
  flex-wrap:wrap;
 }
@@ -58,55 +40,98 @@ div.title {
 }
 
 
-.links {
-	display: flex;
-	font-size: small;
-	flex-wrap:wrap;
-}
 
-.links-item {
- padding : 2px;
-}
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #eee;
+    background: #121212;
+  }
 
-.menu {
- position:relative;
- width: 100%;
- display: flex;
- flex-wrap: wrap;
-}
-
-.menu-item {
- position: relative;
- padding: 4px;
-}
-
-
-@media (max-width: 600px) {
-	article {
-          width: 100%;
-	  height: 80%;
-	}
-
-	.sidebar {
-		 width: 100%;
-		 height: auto;
-		 max-height: 35%;
-	}
-	main {
-		flex-direction: column;
-	}
-	.links {
-		font-size: x-small;
-	}
-	.his {
-		display: none;
-	}
-	.sis {
-            display : inline;
-	}
+  body a {
+    color: #809fff;
+  }
 }
 
 
 .img-post{
  width : 100%;
+}
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #2E3436;
+  overflow: hidden;
+}
+
+
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #268BD2;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #729FCF;
+  color: black;
+}
+
+.topnav a.link {
+	float: right;
+        font-size: 14px;
+}
+
+.topnav a.link:hover {
+	background-color: #2E3436;
+	color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav div.links {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {position: relative;}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
+	.topnav.responsive div.links {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.topnav.responsive a.link {
+		text-align: left;
+		float: none;
+	}
 }
