--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Arial", Helvetica, sans-serif;
+  margin: 0;
 }
 
 .hidden-text {
@@ -8,16 +9,13 @@ body {
 
 
 article { 
-	width: 100%;
- padding: 10px;
- height:100%;
- display:block;
- overflow:scroll;
+ padding: 80px;
+ display: block;
+ overflow: scroll;
 }
 
 main {
-	width ; 100%;
- position: fixed;
+ width : 100%;
  left:0;
  top: 0;
  bottom: 0;
@@ -60,8 +58,13 @@ div.title {
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #2E3436;
-  overflow: hidden;
+	position: fixed;
+	top: 0;
+	margin: 0;
+	padding: 0 ;
+	width: 100%;
+	background-color: #2E3436;
+	overflow: hidden;
 }
 
 
@@ -104,12 +107,18 @@ div.title {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav div.links {
+
+	article {
+		padding: 5px;
+		padding-top: 20px;
+	}	  
+
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+	.topnav div.links {
 		display: none;
 	}
 }
