--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -1,7 +1,7 @@
 <nav class="topnav" id="topnav">
         {% assign pages = site.pages | sort: "weight"  %}      	
          {% for pg in pages %}{% if pg.title %}{% unless pg.hide %}
-	 <a {% if pg.url == page.url %} class = "active" {% endif %} href="{{ pg.url | relative_url }}">{{ pg.title }}</a>{% endunless %}{% endif %}
+	 <a {% if pg.url == page.url %} class = "active" ,{% endif %} href="{{ pg.url | relative_url }}">{{ pg.title }}</a>{% endunless %}{% endif %}
     {% endfor %}
     <div class="links">
     {% for link in site.data.links %}
