--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,7 +1,7 @@
 <h4> research interests </h4>
 
 <ul>
-{% for interest in site.data.interests %} 
+{% for interest in site.data.info.interests %} 
 <li> {{interest}} </li> 
 {% endfor %}
 </ul>
