--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -5,7 +5,7 @@
 	 {% endunless %}{% endif %}
     {% endfor %}
     <div class="links">
-    {% for link in site.data.links %}
+    {% for link in site.data.info.links %}
     <a class = "link", href = "{{ link.link }}">{{ link.name }}</a> 
     {% endfor %}
     </div>
