--- a/_includes/papers.html
+++ b/_includes/papers.html
@@ -1,12 +1,12 @@
 
 <h4> papers </h4> 
-<ul>
+<ol class = "bib">
 {% assign papers = site.data.papers.references | sort: "year" | reverse %}      	
 {% for paper in papers %}
 <li>  {% for author in  paper.author %}
-	{{author.given}}, {{ author.family }} 
+	{{author.given}}, {{ author.family }};  
       {% endfor %}
-      {{ paper.title }},
+      <strong> {{ paper.title }} </strong>,
       <em>{{ paper.container-title }}</em>,
       {{ paper.issued[0].year }},
       {% if paper.volume %} <strong>{{ paper.volume }}</strong>,{% endif %}
@@ -15,4 +15,4 @@
       {% if paper.arxiv %} <a href="{{paper.arxiv}}">arxiv</a> {% endif %} 
 </li>
 {% endfor %}
-</ul>
+</ol>
