--- a/_includes/papers.html
+++ b/_includes/papers.html
@@ -11,8 +11,9 @@
       {{ paper.issued[0].year }},
       {% if paper.volume %} <strong>{{ paper.volume }}</strong>,{% endif %}
       {{ paper.page }}.
-      {% if paper.pdf %} <a href="{{paper.pdf}}">pdf</a> {% endif %} 
-      {% if paper.arxiv %} <a href="{{paper.arxiv}}">arxiv</a> {% endif %} 
+      {% if paper.pdf %} <a href="{{site.baseurl}}/pdf/{{paper.pdf}}">pdf</a> {% endif %} 
+      {% if paper.arxiv %} <a href="https://arxiv.org/abs/{{paper.arxiv}}">arXiv:{{paper.arxiv}}</a> {% endif %} 
+      {% if paper.supplementary %} <a href="{{site.baseurl}}/pdf/{{paper.supplementary}}">supplementary</a> {% endif %} 
 </li>
 {% endfor %}
 </ol>
