--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/style/style.css" />
     <meta name="description" content="{{site.description}}"/>
     <meta name="author" content="{{site.author}}"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
